corpus/cpp/structured_binding/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:8:10: error: structured binding decomposition error
help: ensure the type is decomposable and the number of bindings matches the member count
why: only 1 name provided for structured binding
| src/main.cpp:8:10
|     auto [only] = pair;
|          ^
note: while 'Pair' decomposes into 2 elements
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output